--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -1,5 +1,7 @@
 // Colores:
 $color-base: #206a5d;
+// $color-base: #0080d4;
+// $color-base: darken($color-base, 20);
 $background-color: #ccccff;
 $text-color: darken(white, 80);
 
