--- a/src/sass/_defaults.scss
+++ b/src/sass/_defaults.scss
@@ -5,4 +5,72 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+* {
+    box-sizing: border-box;
+
+    &::before,
+    &::after {
+        box-sizing: inherit;
+    }
+}
+
+a {
+    text-decoration: none;
+    
+    &:not([class]) {
+        color: rgb(0,100,200);
+
+        &:hover {
+            text-decoration: underline;
+        }
+
+        &:visited {
+            color: rgb(0,80,160);
+        }
+    }
+}
+
+label {
+	display: block;
+}
+
+input, button, select, textarea {
+    font:inherit;
+
+    &:not([class]) {
+        -webkit-padding: 0.4em 0;
+        padding: 0.4em;
+        margin: 0 0 0.5em 0;
+        box-sizing: border-box;
+        border: 1px solid #ccc;
+        border-radius: 2px;
+    }
+}
+
+input:disabled {
+	color: #ccc;
+}
+
+button {
+    outline: none;
+    
+    &:not([class]) {
+        background-color: #f4f4f4;
+        color: #333;
+    }
+}
+
+button:disabled {
+	color: #999;
+}
+
+button:not(:disabled):active {
+	background-color: #ddd;
+}
+
+button:focus {
+	border-color: #666;
 }
