--- a/src/sass/_defaults.scss
+++ b/src/sass/_defaults.scss
@@ -6,6 +6,14 @@ body {
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+
+    border: 1px solid;
+    background-color: silver;
+    min-height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 * {
